# asyncfuture

./: CMakeLists.txt  README.md  asyncfuture.h
.github/workflows/: linux_build_and_test.yml  windows_build_and_test.yml
tests/: CMakeLists.txt
tests/asyncfutureunittests/: bugtests.cpp  bugtests.h  cookbook.cpp  example.cpp  main.cpp  samplecode.cpp  shieldtests.cpp  shieldtests.h  spec.cpp  spec.h  testfunctions.h  tools.h
tests/asyncfutureunittests/qtshell/: qtshell.cpp
tests/asyncfutureunittests/qtshell/priv/: qtshellpriv.cpp
tests/asyncfutureunittests/testable/: automator.cpp  testrunner.cpp
